pre-release final update

--- a/covid-19/_chart.html
+++ b/covid-19/_chart.html
@@ -18,15 +18,15 @@
           <select class="form-control data-select" data-chart="countries">
             <option value="cases">Total Confirmed Cases</option>
             <option value="cases-daily">New Cases /Day</option>
-            <option value="cases-daily-7" selected>New Cases, 1 Wk. Avg.</option>
+            <option value="cases-daily-7" selected>New Cases, Recent Avg. (7 data points)</option>
             <option disabled="disabled">—————————</option>
             <option value="tests">Total COVID-19 Tests</option>
             <option value="tests-daily">New Tests /Day</option>
-            <option value="tests-daily-7">New Tests, 1 Wk. Avg.</option>
+            <option value="tests-daily-7">New Tests, Recent Avg. (7 data points)</option>
             <option disabled="disabled">—————————</option>
             <option value="testPositivity">Cumulative Test Positivity</option>
             <option value="testPositivity-daily">Daily Test Positivity</option>
-            <option value="testPositivity-daily-7">Daily Test Positivity, 1 Wk. Avg.</option>
+            <option value="testPositivity-daily-7">Daily Test Positivity, Recent Avg.</option>
           </select>
         </div>
 
