default to tests

--- a/covid-19/_chart.html
+++ b/covid-19/_chart.html
@@ -18,11 +18,11 @@
           <select class="form-control data-select" data-chart="countries">
             <option value="cases">Total Confirmed Cases</option>
             <option value="cases-daily">New Cases /Day</option>
-            <option value="cases-daily-7" selected>New Cases, Recent Avg. (7 data points)</option>
+            <option value="cases-daily-7">New Cases, Recent Avg. (7 data points)</option>
             <option disabled="disabled">—————————</option>
             <option value="tests">Total COVID-19 Tests</option>
             <option value="tests-daily">New Tests /Day</option>
-            <option value="tests-daily-7">New Tests, Recent Avg. (7 data points)</option>
+            <option value="tests-daily-7" selected>New Tests, Recent Avg. (7 data points)</option>
             <option disabled="disabled">—————————</option>
             <option value="testPositivity">Cumulative Test Positivity</option>
             <option value="testPositivity-daily">Daily Test Positivity</option>
