Change 'confirmed' to 'positive' cases

--- a/covid-19/_chart.html
+++ b/covid-19/_chart.html
@@ -16,7 +16,7 @@
             <span class="input-group-text">Data:</span>
           </div>
           <select class="form-control data-select" data-chart="countries">
-            <option value="cases">Total Confirmed Cases</option>
+            <option value="cases">Total Positive Cases</option>
             <option value="cases-daily">New Cases /Day</option>
             <option value="cases-daily-7">New Cases, Recent Avg. (7 data points)</option>
             <option disabled="disabled">—————————</option>
