Improve wording of positive test results

--- a/covid-19/_chart.html
+++ b/covid-19/_chart.html
@@ -16,13 +16,13 @@
             <span class="input-group-text">Data:</span>
           </div>
           <select class="form-control data-select" data-chart="countries">
-            <option value="cases">Total Positive Cases</option>
-            <option value="cases-daily">New Cases /Day</option>
-            <option value="cases-daily-7">New Cases, Recent Avg. (7 data points)</option>
+            <option value="cases">Total Positive Test Results</option>
+            <option value="cases-daily">New Positive Results /Day</option>
+            <option value="cases-daily-7">New Positive Results, Recent Avg. (7 values)</option>
             <option disabled="disabled">—————————</option>
             <option value="tests">Total COVID-19 Tests</option>
             <option value="tests-daily">New Tests /Day</option>
-            <option value="tests-daily-7" selected>New Tests, Recent Avg. (7 data points)</option>
+            <option value="tests-daily-7" selected>New Tests, Recent Avg. (7 values)</option>
             <option disabled="disabled">—————————</option>
             <option value="testPositivity">Cumulative Test Positivity</option>
             <option value="testPositivity-daily">Daily Test Positivity</option>
