Change default to total tests -> total tests (7-day avg)

--- a/covid-19/_chart.html
+++ b/covid-19/_chart.html
@@ -20,9 +20,9 @@
             <option value="cases-daily">New Positive Results /Day</option>
             <option value="cases-daily-7">New Positive Results, Recent Avg. (7 values)</option>
             <option disabled="disabled">—————————</option>
-            <option value="tests">Total COVID-19 Tests</option>
+            <option value="tests" selected>Total COVID-19 Tests</option>
             <option value="tests-daily">New Tests /Day</option>
-            <option value="tests-daily-7" selected>New Tests, Recent Avg. (7 values)</option>
+            <option value="tests-daily-7">New Tests, Recent Avg. (7 values)</option>
             <option disabled="disabled">—————————</option>
             <option value="testPositivity">Cumulative Test Positivity</option>
             <option value="testPositivity-daily">Daily Test Positivity</option>
