--- a/covid-19/_chart.html
+++ b/covid-19/_chart.html
@@ -16,17 +16,17 @@
             <span class="input-group-text">Data:</span>
           </div>
           <select class="form-control data-select" data-chart="countries">
-            <option value="cases">Total Positive Test Results</option>
-            <option value="cases-daily">New Positive Results /Day</option>
-            <option value="cases-daily-7">New Positive Results, Recent Avg. (7 values)</option>
+            <option value="cases">Total COVID-19 Cases</option>
+            <option value="cases-daily">New COVID-19 Cases /Day</option>
+            <option value="cases-daily-7" selected>COVID-19 Cases, 7-Day Avg.</option>
             <option disabled="disabled">—————————</option>
-            <option value="tests" selected>Total COVID-19 Tests</option>
+            <option value="tests">Total COVID-19 Tests</option>
             <option value="tests-daily">New Tests /Day</option>
-            <option value="tests-daily-7">New Tests, Recent Avg. (7 values)</option>
+            <option value="tests-daily-7">New Tests, 7-Day Avg.</option>
             <option disabled="disabled">—————————</option>
             <option value="testPositivity">Cumulative Test Positivity</option>
             <option value="testPositivity-daily">Daily Test Positivity</option>
-            <option value="testPositivity-daily-7">Daily Test Positivity, Recent Avg.</option>
+            <option value="testPositivity-daily-7">Daily Test Positivity, 7-Day Avg.</option>
           </select>
         </div>
 
