--- a/collections/_covid-analysis/2020-10-02/_charts/cases-daily7-UIUC.html
+++ b/collections/_covid-analysis/2020-10-02/_charts/cases-daily7-UIUC.html
@@ -1,4 +1,4 @@
-<section id="ugPositivity-UIUC">
+<section id="ugPositivity-UIUC" data-chart="ugPositivity-UIUC">
   <div class="chart-header" style="margin-top: 20px;" id="countries">
     <h3>On-Campus Undergraduates Infected with COVID-19 at the University of Illinois</h3>
   </div>
@@ -8,4 +8,7 @@
       <div>Loading Visualization...</div>
     </div>
   </div>
+  <div class="text-right" style="font-size: 10px;">
+    <a href="#" onClick="_91divoc.saveGraphImage('png', event);">Download PNG</a>
+  </div>  
 </section>
